modules/rds/.terragrunt-cache/zbOovGXuXm5J18zGQGawSXtBZFI/TL2HCugt5hUcDo46VdBKnQrfRGc/main.tf
resource "aws_vpc" "main" {
  cidr_block           = "10.0.0.0/16"
  enable_dns_support   = true
  enable_dns_hostnames = true
}

resource "aws_subnet" "main" {
  vpc_id                  = aws_vpc.main.id
  cidr_block              = "10.0.1.0/24"
  availability_zone       = "us-east-1c"
  map_public_ip_on_launch = true
}

resource "aws_subnet" "alternative" {
  vpc_id                  = aws_vpc.main.id
  cidr_block              = "10.0.2.0/24"
  availability_zone       = "us-east-1b"
  map_public_ip_on_launch = true
}

resource "aws_db_subnet_group" "default" {
  name       = "default-subnet-group"
  subnet_ids = [aws_subnet.main.id, aws_subnet.alternative.id]
}

resource "aws_security_group" "rds_secgrp" {
  vpc_id = aws_vpc.main.id

  ingress {
    from_port   = 3306
    to_port     = 3306
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"] #Replace with more secure range
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_internet_gateway" "main" {
  vpc_id = aws_vpc.main.id
}

resource "aws_route_table" "public" {
  vpc_id = aws_vpc.main.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.main.id
  }
}

resource "aws_route_table_association" "main_subnet_association" {
  subnet_id      = aws_subnet.main.id
  route_table_id = aws_route_table.public.id
}

resource "aws_route_table_association" "alt_subnet_association" {
  subnet_id      = aws_subnet.alternative.id
  route_table_id = aws_route_table.public.id
}

locals {
  timestamp           = timestamp()
  timestamp_sanitized = replace("${local.timestamp}", "/[-| |T|Z|:]/", "")
}

resource "random_password" "password" {
  length           = 16
  special          = true
  override_special = "#&*=+:?"
}

resource "aws_db_instance" "default" {
  identifier        = "cm-appfolio-db"
  allocated_storage = 20
  engine            = "mysql"
  engine_version    = "8.0"
  instance_class    = "db.t3.micro"
  username          = "admin"
  password          = random_password.password.result

  publicly_accessible = var.db_public_access

  deletion_protection       = var.db_deletion_protection
  skip_final_snapshot       = var.db_skip_final_snapshot
  final_snapshot_identifier = "db-snapshot-${local.timestamp_sanitized}"

  # snapshot_identifier = [insert snapshot to rebuild db from]

  vpc_security_group_ids = ["${aws_security_group.rds_secgrp.id}"]
  db_subnet_group_name   = aws_db_subnet_group.default.name

  backup_retention_period = 7
  backup_window           = "12:45-01:15"
  maintenance_window      = "sun:05:00-sun:06:00"

}

resource "null_resource" "create_databases" {
  for_each = { for combo in var.app_env_list : "${combo.app}-${combo.env}" => combo }

  provisioner "local-exec" {

    command = <<EOT
    # Create the database
    mysql -h ${aws_db_instance.default.address} -P 3306 -uadmin -p'${aws_db_instance.default.password}' -e 'CREATE DATABASE IF NOT EXISTS "${each.value.app}_${each.value.env}";'

    # Check if the database exists and write the result to a temp file
    mysql -h ${aws_db_instance.default.address} -P 3306 -uadmin -p'${aws_db_instance.default.password}' -e 'SHOW DATABASES LIKE "${each.value.app}_${each.value.env}";' > /tmp/db_check_${each.value.app}_${each.value.env}.txt
    EOT

  }

  depends_on = [aws_db_instance.default]
}
